add index blurb, remove lorem ipsum

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="testimonials.html" alt="Testimonials from our clients and partners"><li>Testimonials</li></a>
                         <a href="faq.html" alt="FAQ"><li>FAQ</li></a>
                         <a href="#social-footer" alt="Social media contacts"><li>Social</li></a>
-                        <a href="mailto:#" alt="contact us by email"></a>
+                        <a href="mailto:ronin347media@gmail.com" alt="contact us by email"></a>
                         <li>Contact</li></a>
                     </ul>
                 </div>
@@ -48,27 +48,16 @@
         <section class="call-to-action">
             <div class="ink-partition ip-top-cta"></div>
             <div id="call-to-actions">
-                <h2>call to action blurb</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec
-                    hendrerit
-                    libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor
-                    sem
-                    vitae
-                    lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna
-                    vehicula
-                    leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis
-                    blandit.<br><br>
-
-                    Sed sodales tortor in quam vehicula hendrerit. Duis at mauris rhoncus, varius urna et, sagittis
-                    sapien.
-                    Sed iaculis magna a lacus ultrices lacinia. In aliquet dui pulvinar ante fringilla, quis
-                    lobortis
-                    felis
-                    ultrices. Sed id est efficitur, bibendum augue a, lobortis dolor. Sed scelerisque dolor id
-                    dictum
-                    pellentesque. Phasellus nisi sem, pulvinar sed sollicitudin sollicitudin, rutrum in
-                    justo.<br><br>
+                <h2>Show your worth</h2>
+                <p>At Ronin347, We specialise cinematic promotional content for independent businesses. But we don't just stop there. Our services are underpinned by extensive experience in the fitness industry, coupled with accomplishments across TV, film, and theatres across the world. 
+                    Being deeply routed in both of these industries allow us to bring the qulity and vision of Professional cinematic production, wether it be narrative-based, documentary, promotional or tutorial content<br>
+                    
+                    Want to learn more <a href="about.html" alt="About us">about</a> how we achieve this process? or maybe you have a question? Have a look at our <a href="faq.html" alt="FAQ">FAQ</a>.  
+                    Unsure about what you've read and seen so far? Our partners aren't afraid to comment on the quality of our work. check out their <a href="testimonials.html" alt="Testimonials from our clients and partners">testimonials</a>.<br>
+                    Like what you see so far? or maybe you still have questions? Reach out to us below and see what we can do for you.
                 </p>
+                <h2>Drop us an email</h2>
+                <p>@ <a href="mailto:ronin347media@gmail.com" alt="contact us by email">ronin347media@gmail.com</a></p>
             </div>
         </section>
     </div>
