--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="index-layout">
         <nav><div class="nav-positioner">
-            <button class="nav-menu"><i class="fa-solid fa-bars"></i></button>
+            <button class="nav-menu"><span id="big-nav">Menu</span><i class="fa-solid fa-bars"></i></button>
                 <div class="panel">
                     <ul>
                         <a href="index.html" alt="home"><li id="current">Home</li></a>
@@ -24,8 +24,7 @@
                         <a href="testimonials.html" alt="Testimonials from our clients and partners"><li>Testimonials</li></a>
                         <a href="faq.html" alt="FAQ"><li>FAQ</li></a>
                         <a href="#social-footer" alt="Social media contacts"><li>Social</li></a>
-                        <a href="mailto:ronin347media@gmail.com" alt="contact us by email"></a>
-                        <li>Contact</li></a>
+                        <a href="mailto:ronin347media@gmail.com" alt="contact us by email"><li>Contact</li></a>
                     </ul>
                 </div>
                 </div>
@@ -49,15 +48,15 @@
             <div class="ink-partition ip-top-cta"></div>
             <div id="call-to-actions">
                 <h2>Show your worth</h2>
-                <p>At Ronin347, We specialise cinematic promotional content for independent businesses. But we don't just stop there. Our services are underpinned by extensive experience in the fitness industry, coupled with accomplishments across TV, film, and theatres across the world. 
-                    Being deeply routed in both of these industries allow us to bring the qulity and vision of Professional cinematic production, wether it be narrative-based, documentary, promotional or tutorial content<br>
+                <p>At Ronin347, we specialise cinematic promotional content for independent businesses.<br> But we don't just stop there. Our services are underpinned by extensive experience in the fitness industry, coupled with accomplishments across TV, film, and theatres across the world.<br> Being deeply rooted in both of these industries allow us to bring the quality and vision of Professional cinematic production, whether it be narrative-based, documentary, promotional or tutorial content.</p>
                     
-                    Want to learn more <a href="about.html" alt="About us">about</a> how we achieve this process? or maybe you have a question? Have a look at our <a href="faq.html" alt="FAQ">FAQ</a>.  
-                    Unsure about what you've read and seen so far? Our partners aren't afraid to comment on the quality of our work. check out their <a href="testimonials.html" alt="Testimonials from our clients and partners">testimonials</a>.<br>
-                    Like what you see so far? or maybe you still have questions? Reach out to us below and see what we can do for you.
+                    <p>Want to learn more <a href="about.html" alt="About us">about</a> how we achieve this process? or maybe you have a question? Have a look at our <a href="faq.html" alt="FAQ">FAQ</a>.</p>
+                    
+                    <p>Unsure about what you've read and seen so far? Our partners aren't afraid to comment on the quality of our work. check out their <a href="testimonials.html" alt="Testimonials from our clients and partners">testimonials</a>.</p>
+                    <p>Like what you see so far? or maybe you still have questions? Reach out to us below and see what we can do for you.
                 </p>
-                <h2>Drop us an email</h2>
-                <p>@ <a href="mailto:ronin347media@gmail.com" alt="contact us by email">ronin347media@gmail.com</a></p>
+                <h2 class="contact-head">Drop us an email</h2>
+                <p class="contact-mail">@ <a href="mailto:ronin347media@gmail.com" alt="contact us by email">ronin347media@gmail.com</a></p>
             </div>
         </section>
     </div>
