--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
     </div>
     <div class="index-layout">
-        <nav><div class="nav-positioner">
+        <nav><div>
             <button class="nav-menu"><span id="big-nav">Menu</span><i class="fa-solid fa-bars"></i></button>
                 <div class="panel">
                     <ul>
@@ -32,8 +32,6 @@
                 <div id="logo-positioner">
                     <div class="logo" id="logo-container">
                         <img src="/assets/images/index/ronin-logo-clip.png" alt="Ronin347 Logo">
-                        <!-- <span id="logo-ronin">Ronin</span>
-                        <span id="logo-347">347</span> -->
                     </div>
                 </div>
         <header class="hero" id="hero-project">
@@ -78,12 +76,12 @@
                     </li>
                     <li>
                         <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener"
-                            aria-label="Visit our facebook page (opens in a new tab)"><i
+                            aria-label="watch our youtube playlist (opens in a new tab)"><i
                                 class="fa-brands fa-youtube"></i></a>
                     </li>
                     <li>
                         <a id="instagram" href="https://instagram.com" target="_blank" rel="noopener"
-                            aria-label="Visit our facebook page (opens in a new tab)"><i
+                            aria-label="Visit our Instagram (opens in a new tab)"><i
                                 class="fa-brands fa-instagram"></i></a>
                     </li>
                 </ul>
