complete media queries and finish index

--- a/index.html
+++ b/index.html
@@ -34,18 +34,21 @@
                         <img src="/assets/images/index/ronin-logo-clip.png" alt="Ronin347 Logo">
                     </div>
                 </div>
-        <header class="hero" id="hero-project">
+        <header class="hero"><div id="hero-project">
         
             <video autoplay muted loop>
                 <source src="assets/videos/ronin-hero-vid.mov" type="video/mp4">
             </video>
             <a href="contact-confirmed.html">Watch our Portfolio</a>
             <div class="ink-partition ip-bottom-hero"></div>
+            </div><div class="ink-partition ip-top-cta"></div>
         </header>
 
         <!-- blurb -->
         <section class="call-to-action">
-            <div class="ink-partition ip-top-cta"></div>
+            <div id="mobile-logo">
+                <img src="/assets/images/index/ronin-logo-clip.png" alt="Ronin347 Logo">
+            </div>
             <div id="call-to-actions">
                 <h2>Tell Your Story</h2>
                 <p>At Ronin347, we specialise cinematic promotional content for independent businesses.<br> But we don't just stop there. Our services are underpinned by extensive experience in the fitness industry, coupled with accomplishments across TV, film, and theatres across the world.<br> Being deeply rooted in both of these industries allow us to bring the quality and vision of Professional cinematic production, whether it be narrative-based, documentary, promotional or tutorial content.</p>
