add 404 page first draft

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <div class="panel">
                     <ul>
                         <a href="index.html" alt="home"><li id="current">Home</li></a>
-                        <a href="about.html" alt="About us"><li>About Us</li></a>
-                        <a href="testimonials.html" alt="Testimonials from our clients and partners"><li>Testimonials</li></a>
-                        <a href="faq.html" alt="FAQ"><li>FAQ</li></a>
+                        <a href="404.html" alt="About us"><li>About Us</li></a>
+                        <a href="404.html" alt="Testimonials from our clients and partners"><li>Testimonials</li></a>
+                        <a href="404.html" alt="FAQ"><li>FAQ</li></a>
                         <a href="#social-footer" alt="Social media contacts"><li>Social</li></a>
                         <a href="mailto:ronin347media@gmail.com" alt="contact us by email"><li>Contact</li></a>
                     </ul>
@@ -39,7 +39,7 @@
             <video autoplay muted loop>
                 <source src="assets/videos/ronin-hero-vid.mov" type="video/mp4">
             </video>
-            <a href="contact-confirmed.html">Watch our Portfolio</a>
+            <a href="404.html">Watch our Portfolio</a>
             <div class="ink-partition ip-bottom-hero"></div>
             </div><div class="ink-partition ip-top-cta"></div>
         </header>
