--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <ul>
                         <a href="index.html" alt="home"><li id="current">Home</li></a>
                         <a href="404.html" alt="About us"><li>About Us</li></a>
-                        <a href="404.html" alt="Testimonials from our clients and partners"><li>Testimonials</li></a>
+                        <a href="testimonials.html" alt="Testimonials from our clients and partners"><li>Testimonials</li></a>
                         <a href="404.html" alt="FAQ"><li>FAQ</li></a>
                         <a href="#social-footer" alt="Social media contacts"><li>Social</li></a>
                         <a href="mailto:ronin347media@gmail.com" alt="contact us by email"><li>Contact</li></a>
