--- a/testimonials.html
+++ b/testimonials.html
@@ -5,124 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/style-projects.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style-testimonials.css" rel="stylesheet" type="text/css" />
     <title>Ronin 347 Projects</title>
 </head>
 
 <body>
-    <header>
-        <div id="logo-container">
-            <div class="a1">
-                <span id="logo-r">R</span><span id="logo-o">o</span><span id="logo-nin">nin
-                    <span id="logo-347">347</span>
-            </div>
-        </div>
-        <nav>
-            <ul id="navigation">
-                <li><span id="nav-hover-home">O</span><a href="index.html" alt="home">Home</a></li>
-                <li><a href="testimonials.html" alt="Testimonials from our clients and partners">Testimonials</a></li>
-                <li><a href="#" alt="Social">Social</a></li>
-                <li><a href="faq.html" alt="home">FAQ</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="project">
-        <div class="project-bg" id="project1">
-        <div class="project-video-container">
-        <div class="project-video">
-            <iframe width="956" height="538" src="https://www.youtube.com/embed/DTd3d1hlRs8"
-                title="Scotland's Railway - Onwards" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div></div>
-        <div class="project-info-container">
-        <div class="project-info">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
-                libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem vitae
-                lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna vehicula
-                leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.</p>
-        </div></div></div>
-    </section>
-    <section class="project">
-        <div class="project-bg" id="project1">
-        <div class="project-video-container">
-        <div class="project-video">
-            <iframe width="956" height="538" src="https://www.youtube.com/embed/DTd3d1hlRs8"
-                title="Scotland's Railway - Onwards" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div></div>
-        <div class="project-info-container">
-        <div class="project-info">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
-                libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem vitae
-                lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna vehicula
-                leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.</p>
-        </div></div></div>
-    </section>
-    <section class="project">
-        <div class="project-bg" id="project1">
-        <div class="project-video-container">
-        <div class="project-video">
-            <iframe width="956" height="538" src="https://www.youtube.com/embed/DTd3d1hlRs8"
-                title="Scotland's Railway - Onwards" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div></div>
-        <div class="project-info-container">
-        <div class="project-info">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
-                libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem vitae
-                lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna vehicula
-                leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.</p>
-        </div></div></div>
-    </section>
-    <section class="project">
-        <div class="project-bg" id="project1">
-        <div class="project-video-container">
-        <div class="project-video">
-            <iframe width="956" height="538" src="https://www.youtube.com/embed/DTd3d1hlRs8"
-                title="Scotland's Railway - Onwards" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div></div>
-        <div class="project-info-container">
-        <div class="project-info">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
-                libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem vitae
-                lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna vehicula
-                leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.</p>
-        </div></div></div>
-    </section>
-</body>
-<footer>
-    <div id="social-footer">
-        <div id="social">
-            <h2>See what i'm up to</h2>
-            <ul class="social-buttons">
-                <li>
-                    <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></a>
-                </li>
-                <li>
-                    <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
-                </li>
-                <li>
-                    <a id="instagram" href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
-                </li>
-            </ul>
-        </div>
-        <div id="company-address">
-            Dan Cahill<br>
-            Ronin 347<br>
-            Flat 66, 15 Ibroxholm Oval<br>
-            City of Glasgow<br>
-            G51 2TY<br>
-        </div>
-        <div id="cal-rex-git">
-            <p>Site Developed for Ronin347 by <a href:"#" aria-label="link to Cal-Rex's Github" target="_blank" rel="noopener">Cal-Rex</a></p>
-        </div>
-        <div id="copyright"><p>Copyright Ronin347 Media 2022 ©</p></div>
-    </div>
+    <div class="bg">
+        <div class="bg-overlay"></div>
+        <nav><div>
+            <button class="nav-menu"><span id="big-nav">Menu</span><i class="fa-solid fa-bars"></i></button>
+                <div class="panel">
+                    <ul>
+                        <a href="index.html" alt="home"><li id="current">Home</li></a>
+                        <a href="404.html" alt="About us"><li>About Us</li></a>
+                        <a href="testimonials.html" alt="Testimonials from our clients and partners"><li>Testimonials</li></a>
+                        <a href="404.html" alt="FAQ"><li>FAQ</li></a>
+                        <a href="#social-footer" alt="Social media contacts"><li>Social</li></a>
+                        <a href="mailto:ronin347media@gmail.com" alt="contact us by email"><li>Contact</li></a>
+                    </ul>
+                </div>
+                </div>
+                </nav>
+    <header></header>
+        <footer></footer>
 </footer>
 </body>
 <script src="https://kit.fontawesome.com/85f184e105.js" crossorigin="anonymous"></script>
