first drafting of testimonials page

--- a/testimonials.html
+++ b/testimonials.html
@@ -11,7 +11,6 @@
 
 <body>
     <div class="bg"></div>
-    <div class="bg-overlay"></div>
     <nav>
         <div>
             <button class="nav-menu"><span id="big-nav">Menu</span><i class="fa-solid fa-bars"></i></button>
@@ -39,57 +38,142 @@
             </div>
         </div>
     </nav>
-    <header>
-        <div class="logo-c">
-            <div class="spacer-l"></div>
-            <div class="spacer-l"></div>
-            <div class="spacer-l"></div>
-            <div class="spacer-l"></div>
-            <div class="logo"></div>
-            <div class="spacer-l"></div>
-            <div class="spacer-l"></div>
-            <div class="spacer-l"></div>
-            <div class="spacer-l"></div>
-        </div>
-        <div class="page-name">
-            <h1>Testimonials</h1>
-        </div>
-        <div class="spacer"></div>
-    </header>
-    <footer>
-        <div class="footer" id="social-footer">
-            <div class="ink-partition ip-bottom-cta"></div>
-            <div id="social">
-                <h2>Follow us</h2>
-                <ul class="social-buttons">
-                    <li>
-                        <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener"
-                            aria-label="Visit our facebook page (opens in a new tab)"><i
-                                class="fa-brands fa-twitter-square"></i></a>
-                    </li>
-                    <li>
-                        <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener"
-                            aria-label="watch our youtube playlist (opens in a new tab)"><i
-                                class="fa-brands fa-youtube"></i></a>
-                    </li>
-                    <li>
-                        <a id="instagram" href="https://instagram.com" target="_blank" rel="noopener"
-                            aria-label="Visit our Instagram (opens in a new tab)"><i
-                                class="fa-brands fa-instagram"></i></a>
-                    </li>
-                </ul>
+    <div class="bg-overlay">
+        <header>
+            <div class="logo">
             </div>
-            <div class="footer-creds">
-                <div class="creds-1" id="cal-rex-git">
-                    <p>Site Developed for Ronin347 by <a href="https://github.com/Cal-Rex"
-                            aria-label="link to Cal-Rex's Github" target="_blank" rel="noopener">Cal-Rex</a></p>
-                </div>
-                <div class="creds-2" id="copyright">
-                    <p>Copyright Ronin347 Media 2022 ©</p>
+            <div class="page-name">
+                <h1 class="title">Testimonials</h1>
+            </div>
+        </header>
+        <section class="testimonial-grid">
+            <div class="pro-1">
+                <div class="pro-content">
+                    <div class="video-container"><iframe src="https://www.youtube.com/embed/sUZLStS4j_c" title="Scotland's Railway - Onwards" allowfullscreen></iframe></div>
+                    <div class="testimonial-about">
+                       <h2>Fly Functional Fitness</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
+                            vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
+                            convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
+                            dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
+                            ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
+                            ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
+                            mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+            <div class="pro-2">
+                <div class="pro-content">
+                    <div class="video-container"><iframe src="https://www.youtube.com/embed/_wAS9nsShmw" title="Scotland's Railway - Onwards" allowfullscreen></iframe></div>
+                    <div class="testimonial-about">
+                       <h2>SUJI BFR</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
+                            vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
+                            convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
+                            dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
+                            ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
+                            ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
+                            mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="pro-3">
+                <div class="pro-content">
+                    <div class="video-container"><iframe src="https://www.youtube.com/embed/NO-d7WIJ0RE" title="Scotland's Railway - Onwards" allowfullscreen></iframe></div>
+                    <div class="testimonial-about">
+                       <h2 id="pro-3-h2">Alison Crawford: Crossfit Games Athlete</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
+                            vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
+                            convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
+                            dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
+                            ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
+                            ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
+                            mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="pro-4">
+                <div class="pro-content">
+                    <div class="video-container"><iframe src="https://www.youtube.com/embed/pbS2GWaIXCc" title="Scotland's Railway - Onwards" allowfullscreen></iframe></div>
+                    <div class="testimonial-about">
+                       <h2><em>"Adam whos a pro Rugby player"</em></h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
+                            vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
+                            convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
+                            dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
+                            ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
+                            ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
+                            mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="pro-5">
+                <div class="pro-content">
+                    <div class="video-container"><iframe src="https://www.youtube.com/embed/T7gvCXtF7wE" title="Scotland's Railway - Onwards" allowfullscreen></iframe></div>
+                    <div class="testimonial-about">
+                       <h2>Ross Park:<br> Personal Trainer</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
+                            vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
+                            convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
+                            dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
+                            ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
+                            ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
+                            mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="pro-6">
+                <div class="pro-content">
+                    <div class="video-container"><iframe src="https://www.youtube.com/embed/lITWA-UmNck" title="Scotland's Railway - Onwards" allowfullscreen></iframe></div>
+                    <div class="testimonial-about">
+                       <h2>Puresport CBD</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
+                            vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
+                            convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
+                            dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
+                            ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
+                            ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
+                            mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+                    </div>
+                </div>
+            </div>
+            <footer>
+                <div class="footer" id="social-footer">
+                    <div class="ink-partition ip-bottom-cta"></div>
+                    <div id="social">
+                        <h2>Follow us</h2>
+                        <ul class="social-buttons">
+                            <li>
+                                <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener"
+                                    aria-label="Visit our facebook page (opens in a new tab)"><i
+                                        class="fa-brands fa-twitter-square"></i></a>
+                            </li>
+                            <li>
+                                <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener"
+                                    aria-label="watch our youtube playlist (opens in a new tab)"><i
+                                        class="fa-brands fa-youtube"></i></a>
+                            </li>
+                            <li>
+                                <a id="instagram" href="https://instagram.com" target="_blank" rel="noopener"
+                                    aria-label="Visit our Instagram (opens in a new tab)"><i
+                                        class="fa-brands fa-instagram"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-creds">
+                        <div class="creds-1" id="cal-rex-git">
+                            <p>Site Developed for Ronin347 by <a href="https://github.com/Cal-Rex"
+                                    aria-label="link to Cal-Rex's Github" target="_blank" rel="noopener">Cal-Rex</a></p>
+                        </div>
+                        <div class="creds-2" id="copyright">
+                            <p>Copyright Ronin347 Media 2022 ©</p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        </section>
+    </div>
+
 </body>
 <script src="https://kit.fontawesome.com/85f184e105.js" crossorigin="anonymous"></script>
 <script>
