begin media queries

--- a/testimonials.html
+++ b/testimonials.html
@@ -49,6 +49,7 @@
         <section class="testimonial-grid">
             <div class="pro-1">
                 <div class="pro-content">
+                    <h2 class="col-heading">Fly Functional Fitness</h2>
                     <div class="video-container"><iframe src="https://www.youtube.com/embed/sUZLStS4j_c" title="Scotland's Railway - Onwards" allowfullscreen></iframe></div>
                     <div class="testimonial-about">
                        <h2>Fly Functional Fitness</h2>
