re-add social/footer to testimonials

--- a/testimonials.html
+++ b/testimonials.html
@@ -111,7 +111,39 @@
                                       ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
                                       mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p></div>
           </div>
-
+          <footer>
+            <div class="footer" id="social-footer">
+                <div class="ink-partition ip-bottom-cta"></div>
+                <div id="social">
+                    <h2>Follow us</h2>
+                    <ul class="social-buttons">
+                        <li>
+                            <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener"
+                                aria-label="Visit our facebook page (opens in a new tab)"><i
+                                    class="fa-brands fa-twitter-square"></i></a>
+                        </li>
+                        <li>
+                            <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener"
+                                aria-label="watch our youtube playlist (opens in a new tab)"><i
+                                    class="fa-brands fa-youtube"></i></a>
+                        </li>
+                        <li>
+                            <a id="instagram" href="https://instagram.com" target="_blank" rel="noopener"
+                                aria-label="Visit our Instagram (opens in a new tab)"><i
+                                    class="fa-brands fa-instagram"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-creds">
+                    <div class="creds-1" id="cal-rex-git">
+                        <p>Site Developed for Ronin347 by <a href="https://github.com/Cal-Rex" aria-label="link to Cal-Rex's Github" target="_blank" rel="noopener">Cal-Rex</a></p>
+                    </div>
+                    <div class="creds-2" id="copyright">
+                        <p>Copyright Ronin347 Media 2022 ©</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 </body>
 <script src="https://kit.fontawesome.com/85f184e105.js" crossorigin="anonymous"></script>
 <script>
