--- a/testimonials.html
+++ b/testimonials.html
@@ -25,7 +25,7 @@
                     <a href="testimonials.html" alt="Testimonials from our clients and partners">
                         <li id="current">Testimonials</li>
                     </a>
-                    <a href="404.html" alt="FAQ">
+                    <a href="faq.html" alt="FAQ">
                         <li>FAQ</li>
                     </a>
                     <a href="#social-footer" alt="Social media contacts">
@@ -112,7 +112,7 @@
                                       mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p></div>
           </div>
           <footer>
-            <div class="footer" id="social-footer">
+            <div id="social-footer">
                 <div class="ink-partition ip-bottom-cta"></div>
                 <div id="social">
                     <h2>Follow us</h2>
