--- a/faq.html
+++ b/faq.html
@@ -6,52 +6,129 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style-faq.css" rel="stylesheet" type="text/css" />
-    <title>Ronin 347</title>
+    <title>Ronin 347 Projects</title>
 </head>
 
 <body>
-    <header>
-        <div id="logo-container">
-            <div class="a1">
-                <span id="logo-r">R</span><span id="logo-o">o</span><span id="logo-nin">nin
-                    <span id="logo-347">347</span>
+    <div class="bg"></div>
+    <nav>
+        <div>
+            <button class="nav-menu"><span id="big-nav">Menu</span><i class="fa-solid fa-bars"></i></button>
+            <div class="panel">
+                <ul>
+                    <a href="index.html" alt="home">
+                        <li>Home</li>
+                    </a>
+                    <a href="404.html" alt="About us">
+                        <li>About Us</li>
+                    </a>
+                    <a href="testimonials.html" alt="Testimonials from our clients and partners">
+                        <li id="current">Testimonials</li>
+                    </a>
+                    <a href="faq.html" alt="FAQ">
+                        <li>FAQ</li>
+                    </a>
+                    <a href="#social-footer" alt="Social media contacts">
+                        <li>Social</li>
+                    </a>
+                    <a href="mailto:ronin347media@gmail.com" alt="contact us by email">
+                        <li>Contact</li>
+                    </a>
+                </ul>
             </div>
         </div>
-        <nav>
-            <ul id="navigation">
-                <li><span id="nav-hover-home">O</span><a href="index.html" alt="home">Home</a></li>
-                <li><a href="projects.html" alt="projects">Projects</a></li>
-                <li><a href="#" alt="Social">Social</a></li>
-                <li><a href="faq.html" alt="home">FAQ</a></li>
-            </ul>
-        </nav>
+    </nav>
+    <header>
+        <div class="logo">
+        </div>
+        <div class="page-name">
+            <h1>Frequently Asked Questions</h1>
+        </div>
     </header>
-    <section id="faq">
-        <div id="faq-accordion">
-            <details closed="">
-                <summary>
-                    FAQ 1
-                </summary>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
-                    libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem
-                    vitae
-                    lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna
-                    vehicula
-                    leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.</p>
-            </details>
-            <details closed="">
-                <summary>
-                    FAQ 2
-                </summary>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
-                    libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem
-                    vitae
-                    lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna
-                    vehicula
-                    leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.</p>
-            </details>
+    <section class="faq-container">
+        <div class="faq">
+            <h2>Lorem Ipsum?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a vehicula.
+                Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh convallis euismod. Nulla
+                vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et dapibus neque. In hac habitasse platea
+                dictumst. Integer sed lobortis risus.</p>
+        </div>
+        <div class="faq">
+            <h2>Lorem Ipsum?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a vehicula.
+                Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh convallis euismod. Nulla
+                vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et dapibus neque. In hac habitasse platea
+                dictumst. Integer sed lobortis risus. Pellentesque ultrices venenatis venenatis. Aliquam facilisis velit
+                ut mauris viverra dignissim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere
+                congue diam, eu vehicula mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit
+                nibh.</p>
+        </div>
+        <div class="faq">
+            <h2>Lorem Ipsum?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a vehicula.
+                Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh convallis euismod. Nulla
+                vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et dapibus neque. In hac habitasse platea
+                dictumst. Integer sed lobortis risus.</p>
+        </div>
+        <div class="faq">
+            <h2>Lorem Ipsum?</h2>
+            <p>Nullam feugiat, magna in dictum dignissim, tortor sem laoreet mi, nec lacinia ligula mauris eget ex.
+                Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
         </div>
     </section>
+    <footer>
+        <div id="social-footer">
+            <div class="ink-partition ip-bottom-cta"></div>
+            <div id="social">
+                <h2>Follow us</h2>
+                <ul class="social-buttons">
+                    <li>
+                        <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener"
+                            aria-label="Visit our facebook page (opens in a new tab)"><i
+                                class="fa-brands fa-twitter-square"></i></a>
+                    </li>
+                    <li>
+                        <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener"
+                            aria-label="watch our youtube playlist (opens in a new tab)"><i
+                                class="fa-brands fa-youtube"></i></a>
+                    </li>
+                    <li>
+                        <a id="instagram" href="https://instagram.com" target="_blank" rel="noopener"
+                            aria-label="Visit our Instagram (opens in a new tab)"><i
+                                class="fa-brands fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-creds">
+                <div class="creds-1" id="cal-rex-git">
+                    <p>Site Developed for Ronin347 by <a href="https://github.com/Cal-Rex"
+                            aria-label="link to Cal-Rex's Github" target="_blank" rel="noopener">Cal-Rex</a></p>
+                </div>
+                <div class="creds-2" id="copyright">
+                    <p>Copyright Ronin347 Media 2022 ©</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+<script src="https://kit.fontawesome.com/85f184e105.js" crossorigin="anonymous"></script>
+<script>
+    var acc = document.getElementsByClassName("nav-menu");
+    var i;
+
+    for (i = 0; i < acc.length; i++) {
+        acc[i].addEventListener("click", function () {
+            this.classList.toggle("active");
+            var panel = this.nextElementSibling;
+            if (panel.style.display === "block") {
+                panel.style.display = "none";
+            } else {
+                panel.style.display = "block";
+            }
+        });
+    }
+</script>
+
+</html>
 
 </html>
