add first phase about section

--- a/about.html
+++ b/about.html
@@ -1,27 +1,112 @@
-<section id="about-container">
-    <div class="ink-partition" id="ink-partition-about-top"></div>
-    <div id="about-image-container">
-        <div id="about-image"><div id="about-image-shade"></div>
-        </div>
-    </div>
-    <!-- <div id="about-text-container"> -->
-        <div id="about-text">
-            <h2 id="about-heading-mobile">About Ronin</h2><br><br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
-                libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem
-                vitae
-                lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna
-                vehicula
-                leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.<br><br>
+<!DOCTYPE html>
+<html lang="en">
 
-                Sed sodales tortor in quam vehicula hendrerit. Duis at mauris rhoncus, varius urna et, sagittis
-                sapien.
-                Sed iaculis magna a lacus ultrices lacinia. In aliquet dui pulvinar ante fringilla, quis lobortis
-                felis
-                ultrices. Sed id est efficitur, bibendum augue a, lobortis dolor. Sed scelerisque dolor id dictum
-                pellentesque. Phasellus nisi sem, pulvinar sed sollicitudin sollicitudin, rutrum in justo.<br><br>
-            </p>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/css/style-about.css" rel="stylesheet" type="text/css" />
+    <title>Ronin 347 Projects</title>
+</head>
+
+<body>
+    <div class="bg"></div>
+    <nav>
+        <div>
+            <button class="nav-menu"><span id="big-nav">Menu</span><i class="fa-solid fa-bars"></i></button>
+            <div class="panel">
+                <ul>
+                    <a href="index.html" alt="home">
+                        <li>Home</li>
+                    </a>
+                    <a href="about.html" alt="About us">
+                        <li>About Us</li>
+                    </a>
+                    <a href="testimonials.html" alt="Testimonials from our clients and partners">
+                        <li id="current">Testimonials</li>
+                    </a>
+                    <a href="faq.html" alt="FAQ">
+                        <li>FAQ</li>
+                    </a>
+                    <a href="#social-footer" alt="Social media contacts">
+                        <li>Social</li>
+                    </a>
+                    <a href="mailto:ronin347media@gmail.com" alt="contact us by email">
+                        <li>Contact</li>
+                    </a>
+                </ul>
+            </div>
         </div>
-    <!-- </div> -->
-    <div class="ink-partition" id="ink-partition-about-bottom"></div>
-</section>
+    </nav>
+    <header>
+        <div class="logo">
+        </div>
+        <div class="page-name">
+            <h1>Our Story</h1>
+        </div>
+    </header>
+    <section class="about-container">
+        <div class="about">
+            <h2>Lorem Ipsum</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a vehicula.
+                Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh convallis euismod. Nulla
+                vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et dapibus neque. In hac habitasse platea
+                dictumst. Integer sed lobortis risus.</p>
+        </div>
+    </section>
+    <footer>
+        <div id="social-footer">
+            <div class="ink-partition ip-bottom-cta"></div>
+            <div id="social">
+                <h2>Follow us</h2>
+                <ul class="social-buttons">
+                    <li>
+                        <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener"
+                            aria-label="Visit our facebook page (opens in a new tab)"><i
+                                class="fa-brands fa-twitter-square"></i></a>
+                    </li>
+                    <li>
+                        <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener"
+                            aria-label="watch our youtube playlist (opens in a new tab)"><i
+                                class="fa-brands fa-youtube"></i></a>
+                    </li>
+                    <li>
+                        <a id="instagram" href="https://instagram.com" target="_blank" rel="noopener"
+                            aria-label="Visit our Instagram (opens in a new tab)"><i
+                                class="fa-brands fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-creds">
+                <div class="creds-1" id="cal-rex-git">
+                    <p>Site Developed for Ronin347 by <a href="https://github.com/Cal-Rex"
+                            aria-label="link to Cal-Rex's Github" target="_blank" rel="noopener">Cal-Rex</a></p>
+                </div>
+                <div class="creds-2" id="copyright">
+                    <p>Copyright Ronin347 Media 2022 ©</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
+<script src="https://kit.fontawesome.com/85f184e105.js" crossorigin="anonymous"></script>
+<script>
+    var acc = document.getElementsByClassName("nav-menu");
+    var i;
+
+    for (i = 0; i < acc.length; i++) {
+        acc[i].addEventListener("click", function () {
+            this.classList.toggle("active");
+            var panel = this.nextElementSibling;
+            if (panel.style.display === "block") {
+                panel.style.display = "none";
+            } else {
+                panel.style.display = "block";
+            }
+        });
+    }
+</script>
+
+</html>
+
+</html>
