--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="panel">
                     <ul>
                         <a href="index.html" alt="home"><li id="current">Home</li></a>
-                        <a href="404.html" alt="About us"><li>About Us</li></a>
+                        <a href="about.html" alt="About us"><li>About Us</li></a>
                         <a href="testimonials.html" alt="Testimonials from our clients and partners"><li>Testimonials</li></a>
                         <a href="faq.html" alt="FAQ"><li>FAQ</li></a>
                         <a href="#social-footer" alt="Social media contacts"><li>Social</li></a>
